 - [DS-123] xmlui browse in empty collection displays "Now showing items 1-0" of 0 - incorrect numbering
 - [DS-508] Attachment spelled as attachement in DailyReportEmailer
 - [DS-539] Misspelled attribute in MODS/METS output

(Stuart Lewis)
 - [DS-242] Special groups shown for logged in user rather than for user being examined
 - [DS-506] embargo-lifter command missing from launcher.xml
 - [DS-526] ItemUpdate - script update
 - [DS-572] Batch metadata editor fails to notice change of item's owning collection

(Ivan Masar)
 - [DS-515] Czech localization of 1.5.2

(Ben Bosman)
 - [DS-538] restricted items are being returned in OAI GetRecord method while using harvest.includerestricted.oai
 - [DS-493] Url in browser is incorrect after login

1.6.0 final
===========

(Alexey Maslov)
 - [DS-289] OAI-PMH + OAI-ORE harvesting support

(Kim Shepherd)
 - [DS-118] File preview link during submission leads to page not found
 - [DS-121] XMLUI Feedback form breaks with multiple hostnames
 - [DS-156] File description not available in XMLUI
 - [DS-198] File descriptions can not be removed/cleared in XMLUI
 - [DS-240] Item validityKey not complete
 - [DS-251] Bulk Metadata Editing: XMLUI aspect and forms
 - [DS-363] JSPUI statistics views
 - [DS-406] View Statistics button does not work in item page
 - [DS-409] JSPUI stats display ignores 'statistics.item.authorization.admin'
 - [DS-414] File downloads listed in collections and communities statistics
 - [DS-438] JSPUI stats - filenames incorrect
 - [DS-418] I18n broken in JSPUI
 - [DS-474] handle.canonical.prefix undocumented

(Claudia Juergen)
 - [DS-114] Links not working due to trailing white space in dspace.url
 - [DS-188] Misspell exclude.type=indentifier in dstat.cfg
 - [DS-197] Deleting a primary bitstream does not clear the primary_bitstream_id on the bundle table
 - [DS-222] Email alerts due to internal errors are not sent, if context is missing