@@ -39,10 +39,27 @@
 # DAMAGE.
 #
 ###########################################################################
+#
+# This is a simple shell script for running a command-line DSpace tool.
+# It sets the CLASSPATH appropriately before invoking Java.
 
-# Script for running the DSpace launcher.
-
-# Get the DSPACE/bin directory
 BINDIR=`dirname $0`
+DSPACEDIR=`cd "$BINDIR/.." ; pwd`
 
-$BINDIR/dsrun org.dspace.app.launcher.ScriptLauncher $@
+# Get the JARs in $DSPACEDIR/jsp/WEB-INF/lib, separated by ':'
+JARS=`echo $DSPACEDIR/lib/*.jar | sed 's/ /\:/g'`
+
+# Class path for DSpace will be:
+#   Any existing classpath
+#   The JARs (WEB-INF/lib/*.jar)
+#   The WEB-INF/classes directory
+FULLPATH=$CLASSPATH:$JARS:$DSPACEDIR/config
+
+#Allow user to specify java options through JAVA_OPTS variable
+if [ "$JAVA_OPTS" = "" ]; then
+  #Default Java to use 256MB of memory
+  JAVA_OPTS=-Xmx256m
+fi
+
+# Now invoke Java
+java $JAVA_OPTS -classpath $FULLPATH org.dspace.app.launcher.ScriptLauncher "$@"
