@@ -46,4 +46,4 @@
 BINDIR=`dirname $0`
 
 echo "Generating sitemaps"
-$BINDIR/dsrun org.dspace.app.sitemap.GenerateSitemaps $@
+$BINDIR/dspace generate-sitemaps "$@"
