@@ -46,4 +46,4 @@
 # Get the DSPACE/bin directory
 BINDIR=`dirname $0`
 
-$BINDIR/dsrun org.dspace.app.statistics.CreateStatReport -r stat-report-general
+$BINDIR/dspace stat-report-general
