@@ -48,4 +48,4 @@
 # Get the DSPACE/bin directory
 BINDIR=`dirname $0`
 
-$BINDIR/dsrun org.dspace.app.statistics.CreateStatReport -r stat-report-initial
+$BINDIR/dspace stat-report-initial
