@@ -47,4 +47,4 @@
 # Get the DSPACE/bin directory
 BINDIR=`dirname $0`
 
-$BINDIR/dsrun org.dspace.app.statistics.CreateStatReport -r stat-report-monthly
+$BINDIR/dspace stat-report-monthly
